--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = { version = "0.7", features = ["json"] }
+axum = { version = "0.7", features = ["json", "ws"] }
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
@@ -17,3 +17,7 @@ once_cell = "1"
 hex = "0.4"
 chrono = { version = "0.4", features = ["clock"] }
 anyhow = "1"
+x25519-dalek = { version = "2" }
+base64 = "0.22"
+hkdf = "0.12"
+sha2 = "0.10"
