--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -17,6 +17,7 @@ once_cell = "1"
 hex = "0.4"
 chrono = { version = "0.4", features = ["clock"] }
 anyhow = "1"
+ norc_core = { path = "../norc_core" }
 x25519-dalek = { version = "2" }
 base64 = "0.22"
 hkdf = "0.12"
