Add session key derivation and AEAD encryption support
Introduces session key derivation using HKDF and transcript hash, and implements AEAD encryption/decryption with ChaCha20Poly1305 in norc_core. Updates client and server to derive and print session keys after handshake. Adds chacha20poly1305 as a dependency.

--- a/norc_core/Cargo.toml
+++ b/norc_core/Cargo.toml
@@ -16,3 +16,4 @@ ed25519-dalek = "2"
 rand = "0.8"
 uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
 thiserror = "1"
+chacha20poly1305 = { version = "0.10", features = ["std"] }
