Add tracing for structured logging to client and server
Introduces the `tracing` and `tracing-subscriber` crates to both client and server for structured, leveled logging. Replaces most `println!` and `eprintln!` calls with `info!`, `debug!`, and `warn!` macros, and adds initialization functions for tracing with environment-based log filtering. This improves observability and makes log output more consistent and configurable.

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -21,3 +21,5 @@ base64 = "0.22"
 hkdf = "0.12"
 sha2 = "0.10"
 norc_core = { path = "../norc_core" }
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
