Add federation message forwarding support
Introduces a new NorcMessage variant for federated forwarding, updates server capabilities to include federation, and implements logic to forward chat messages between federation peers using tokio-tungstenite. Adds hop count limiting to prevent message loops and environment-based configuration for federation peers.

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -25,3 +25,4 @@ sha2 = "0.10"
 futures-util = "0.3"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
+tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
