--- a/src/crates/server-core/Cargo.toml
+++ b/src/crates/server-core/Cargo.toml
@@ -30,6 +30,10 @@ anyhow = { workspace = true }
 # Observability
 tracing = { workspace = true }
 
+# Time and UUID
+uuid = { workspace = true }
+chrono = { workspace = true }
+
 [features]
 default = []
 sqlite = ["sqlx"]
