--- a/src/crates/cli/Cargo.toml
+++ b/src/crates/cli/Cargo.toml
@@ -25,5 +25,9 @@ serde = { workspace = true }
 thiserror = { workspace = true }
 anyhow = { workspace = true }
 
+# Observability
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+
 [features]
 default = []
