Add xtask automation crate for developer workflows
Introduces a new 'xtask' crate to the workspace for reproducible developer automation tasks such as CI, linting, auditing, coverage, and benchmarking. The initial implementation provides commands for CI, lint, and placeholders for audit, coverage, and bench, following the community xtask pattern.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "src/crates/server-core",
     "src/crates/tui",
     "src/crates/cli",
+    "src/crates/xtask",
     "src/client",
     "src/server"
 ]
