Add property and handshake negotiation tests to protocol
Introduces new test files for framing encode/decode property tests and handshake version/capability negotiation. Updates dev-dependencies in Cargo.toml to include bincode and serde for testing support.

--- a/src/crates/protocol/Cargo.toml
+++ b/src/crates/protocol/Cargo.toml
@@ -43,6 +43,9 @@ bytes = { workspace = true }
 
 [dev-dependencies]
 proptest = { workspace = true }
+bincode = { workspace = true }
+serde = { workspace = true }
+proptest = { workspace = true }
 tokio-test = "0.4"
 rand = { workspace = true }
 
