Refactor protocol, config, and server-core crates structure
Major refactor of the protocol, config, and server-core crates. Removes legacy modules and scaffolding, introduces new core modules (identity, message, crypto, loader, connection), and unifies error handling. Protocol and config types are now more structured and extensible, with improved configuration loading and validation. Server-core gains a new connection manager and connection handler. Cargo.toml files updated for new dependencies and crate metadata.

--- a/src/crates/client-core/Cargo.toml
+++ b/src/crates/client-core/Cargo.toml
@@ -6,5 +6,27 @@ license.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 repository.workspace = true
-description = "NORC Client Core - Headless client library"
-keywords = ["client", "norc", "chat"]
+description = "NORC Client Core - Core client functionality"
+keywords = ["client", "api"]
+
+[lib]
+name = "norc_client_core"
+crate-type = ["lib"]
+
+[dependencies]
+# Workspace crates
+norc-protocol = { path = "../protocol" }
+norc-transport = { path = "../transport" }
+
+# Async runtime
+tokio = { workspace = true }
+
+# Logging
+tracing = { workspace = true }
+
+# Error handling
+anyhow = { workspace = true }
+thiserror = { workspace = true }
+
+[dev-dependencies]
+tokio-test = { workspace = true }
