--- a/src/crates/config/Cargo.toml
+++ b/src/crates/config/Cargo.toml
@@ -6,17 +6,23 @@ license.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 repository.workspace = true
-description = "NORC Configuration Management"
-keywords = ["config", "toml", "validation"]
+description = "NORC Configuration - Configuration management and parsing"
+keywords = ["config", "settings", "toml"]
+
+[lib]
+name = "norc_config"
+crate-type = ["lib"]
 
 [dependencies]
+# Serialization
 serde = { workspace = true }
-serde_json = { workspace = true }
 toml = { workspace = true }
+
+# Error handling
 anyhow = { workspace = true }
 thiserror = { workspace = true }
-tracing = { workspace = true }
+
+# File system operations (no additional dependencies needed)
 
 [dev-dependencies]
-tokio-test = { workspace = true }
 tempfile = { workspace = true }
