Refactor lint settings and improve code consistency
Moved lint configuration to workspace and crate-level [lints] sections for CI compatibility and maintainability. Updated descriptions and keywords in Cargo.toml files for clarity. Applied code formatting and style improvements, removed redundant code, and improved error handling and test annotations. No functional changes to core logic.

--- a/src/client/Cargo.toml
+++ b/src/client/Cargo.toml
@@ -8,6 +8,9 @@ rust-version.workspace = true
 repository.workspace = true
 description = "NORC Client - Terminal chat client"
 
+[lints]
+workspace = true
+
 [[bin]]
 name = "norc-client"
 path = "main.rs"
