--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -136,12 +136,21 @@ jobs:
             ${{ runner.os }}-bench-cargo-
             
       - name: Run benchmarks
-        run: cargo bench --all-features
+        run: |
+          # Only run benchmarks if criterion benchmarks exist
+          if find . -name "benches" -type d | grep -q .; then
+            cargo bench --all-features
+          else
+            echo "No benchmarks found, skipping"
+          fi
         
       - name: Store benchmark results
         uses: benchmark-action/github-action-benchmark@v1
+        if: success() && github.event_name == 'push' && github.ref == 'refs/heads/main'
         with:
           tool: 'cargo'
           output-file-path: target/criterion/report/index.html
           github-token: ${{ secrets.GITHUB_TOKEN }}
           auto-push: true
+          comment-on-alert: true
+          alert-threshold: '200%'
