Refactor config and workspace structure for server
Removed workspace-wide lint and dependency configuration from Cargo.toml and moved to per-crate dependencies. Added new server configuration files and CLI definitions. Refactored config crate to provide a unified ServerConfig struct with validation and CLI override support. Removed legacy config loader and error modules. Added examples for development, production, and default server configuration. Updated client and core crates to use placeholder dependencies. Removed CI workflow and deny.toml for dependency auditing.

--- a/src/client/Cargo.toml
+++ b/src/client/Cargo.toml
@@ -8,9 +8,6 @@ rust-version.workspace = true
 repository.workspace = true
 description = "NORC Client - Terminal chat client"
 
-[lints]
-workspace = true
-
-[[bin]]
-name = "norc-client"
-path = "main.rs"
+[dependencies]
+# Placeholder dependencies for the client
+tokio = { version = "1.40", features = ["full"] }
