--- a/src/crates/cli/Cargo.toml
+++ b/src/crates/cli/Cargo.toml
@@ -6,23 +6,10 @@ license.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 repository.workspace = true
-description = "Command line interface library for NORC"
-keywords = ["cli", "command-line"]
-
-[lints]
-workspace = true
-
-[lib]
-name = "norc_cli"
-crate-type = ["lib"]
+description = "Command-line interface for NORC"
+keywords = ["cli", "terminal"]
 
 [dependencies]
-# CLI handling
-clap = { workspace = true }
-
-# Error handling
-anyhow = { workspace = true }
-thiserror = { workspace = true }
-
-[dev-dependencies]
-tempfile = { workspace = true }
+# Placeholder dependencies
+clap = { version = "4.5", features = ["derive"] }
+tokio = { version = "1.40", features = ["full"] }
