--- a/src/crates/config/Cargo.toml
+++ b/src/crates/config/Cargo.toml
@@ -9,23 +9,8 @@ repository.workspace = true
 description = "Configuration management for NORC"
 keywords = ["config", "toml"]
 
-[lints]
-workspace = true
-
-[lib]
-name = "norc_config"
-crate-type = ["lib"]
-
 [dependencies]
-# Serialization
-serde = { workspace = true }
-toml = { workspace = true }
-
-# Error handling
-anyhow = { workspace = true }
-thiserror = { workspace = true }
-
-# File system operations (no additional dependencies needed)
-
-[dev-dependencies]
-tempfile = { workspace = true }
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.8"
+thiserror = "1.0"
+clap = { version = "4.5", features = ["derive"] }
