--- a/src/crates/server-core/Cargo.toml
+++ b/src/crates/server-core/Cargo.toml
@@ -9,35 +9,36 @@ repository.workspace = true
 description = "NORC Server Core - Core server functionality and daemon management"
 keywords = ["server", "daemon", "federation"]
 
-[lib]
-name = "norc_server_core"
-crate-type = ["lib"]
-
 [dependencies]
-# Workspace crates
-norc-protocol = { path = "../protocol" }
+# Local workspace dependencies
 norc-config = { path = "../config" }
 
-# Async runtime
-tokio = { workspace = true }
+# Core async runtime
+tokio = { version = "1.40", features = ["full"] }
 
-# Logging
-tracing = { workspace = true }
+# Serialization
+serde = { version = "1.0", features = ["derive"] }
+
+# Logging and tracing
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
 
 # Error handling
-anyhow = { workspace = true }
-thiserror = { workspace = true }
+anyhow = "1.0"
+thiserror = "1.0"
 
-# Network
-tokio-rustls = { workspace = true }
-rustls = { workspace = true }
+# Cross-platform utilities
+ctrlc = "3.4"
 
-# Utilities
-futures = { workspace = true }
-pin-project-lite = { workspace = true }
+# Platform-specific daemon utilities
+[target.'cfg(unix)'.dependencies]
+nix = { version = "0.29", features = ["signal", "process", "user"] }
+libc = "0.2"
 
-[dev-dependencies]
-tokio-test = { workspace = true }
-tempfile = { workspace = true }
-[lints]
-workspace = true
+[target.'cfg(windows)'.dependencies]
+windows = { version = "0.57", features = [
+    "Win32_Foundation",
+    "Win32_System_Services",
+    "Win32_System_Threading",
+    "Win32_Security",
+] }
