--- a/src/crates/transport/Cargo.toml
+++ b/src/crates/transport/Cargo.toml
@@ -10,6 +10,41 @@ description = "Transport layer for NORC protocol"
 keywords = ["transport", "network"]
 
 [dependencies]
-# Placeholder dependencies
-tokio = { version = "1.40", features = ["net", "io-util"] }
+# Local dependencies
+norc-protocol = { path = "../protocol" }
+
+# Async runtime and networking
+tokio = { version = "1.40", features = ["full"] }
+tokio-util = { version = "0.7", features = ["codec"] }
+async-trait = "0.1"
+futures-util = "0.3"
+
+# TLS support
+tokio-rustls = "0.26"
+rustls = { version = "0.23", features = ["std"] }
+rustls-pemfile = "2.1"
+webpki-roots = "0.26"
+
+# WebSocket support
+tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
+tungstenite = "0.24"
+
+# QUIC support (optional)
+quinn = { version = "0.11", optional = true }
+
+# Serialization
 serde = { version = "1.0", features = ["derive"] }
+bytes = "1.7"
+
+# Error handling
+thiserror = "1.0"
+anyhow = "1.0"
+
+# Tracing
+tracing = "0.1"
+
+[features]
+default = ["tls", "websocket"]
+tls = []
+websocket = []
+quic = ["quinn"]
