--- a/src/crates/server-core/Cargo.toml
+++ b/src/crates/server-core/Cargo.toml
@@ -27,6 +27,7 @@ num_cpus = "1.16"
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
+bincode = "1.3"
 
 # Logging and tracing
 tracing = "0.1"
