Add persistence crate with database and repositories
Introduces a new 'norc-persistence' crate providing database abstraction, migrations, and repository pattern for users, devices, sessions, messages, federation, presence, push tokens, and audit logs. Adds initial SQL migrations for all core tables. Updates workspace Cargo.toml to include the new crate. Also extends server config with organization_id and significantly expands federation engine with handshake logic, connection management, and partner state tracking.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "src/crates/transport", 
     "src/crates/client-core",
     "src/crates/server-core",
+    "src/crates/persistence",
     "src/crates/tui",
     "src/crates/cli",
     "src/crates/config",
