Integrate persistence layer into server core
Added norc-persistence as a dependency and integrated database and repository initialization into ServerCore. Updated connection handling to inject repository dependencies. Refactored ServerCore::new to be async and return a Result, and updated main entry points to await server initialization. Provided repository accessors for use throughout the server.

--- a/src/crates/server-core/Cargo.toml
+++ b/src/crates/server-core/Cargo.toml
@@ -14,6 +14,7 @@ keywords = ["server", "daemon", "federation"]
 norc-config = { path = "../config" }
 norc-protocol = { path = "../protocol" }
 norc-transport = { path = "../transport" }
+norc-persistence = { path = "../persistence" }
 
 # TLS support
 rustls = "0.23"
