Add initial admin-api crate with REST API scaffolding
Introduces the new 'norc-admin-api' crate providing a secure administrative REST API for NORC server management. Includes authentication, RBAC, error handling, middleware for security and rate limiting, and handler scaffolding for users, devices, config, federation, monitoring, audit logs, and API key management. Updates the workspace Cargo.toml to include the new crate.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "src/crates/client-core",
     "src/crates/server-core",
     "src/crates/persistence",
+    "src/crates/admin-api",
     "src/crates/tui",
     "src/crates/cli",
     "src/crates/config",
