--- a/src/crates/admin-api/Cargo.toml
+++ b/src/crates/admin-api/Cargo.toml
@@ -26,6 +26,8 @@ bcrypt = "0.15"
 rand = "0.8"
 sha2 = "0.10"
 hex = "0.4"
+base64 = "0.22"
+blake3 = "1.5"
 
 # Time handling
 chrono = { version = "0.4", features = ["serde"] }
