--- a/src/crates/server-core/Cargo.toml
+++ b/src/crates/server-core/Cargo.toml
@@ -48,6 +48,17 @@ tracing-opentelemetry = { version = "0.22", optional = true }
 anyhow = "1.0"
 thiserror = "1.0"
 
+# Cryptography for auth
+x509-parser = "0.16"
+ed25519-dalek = "2.1"
+rand = "0.8"
+
+# Time and date
+chrono = "0.4"
+
+# UUID generation
+uuid = { version = "1.10", features = ["v4"] }
+
 # Cross-platform utilities
 ctrlc = "3.4"
 
