--- a/src/crates/server-core/Cargo.toml
+++ b/src/crates/server-core/Cargo.toml
@@ -52,6 +52,8 @@ thiserror = "1.0"
 x509-parser = "0.16"
 ed25519-dalek = "2.1"
 rand = "0.8"
+blake3 = "1.5"
+hex = "0.4"
 
 # Time and date
 chrono = "0.4"
