--- a/src/crates/transport/Cargo.toml
+++ b/src/crates/transport/Cargo.toml
@@ -21,9 +21,12 @@ futures-util = "0.3"
 
 # TLS support
 tokio-rustls = "0.26"
-rustls = { version = "0.23", features = ["std"] }
+rustls = { version = "0.23", features = ["std", "ring"] }
 rustls-pemfile = "2.1"
 webpki-roots = "0.26"
+x509-parser = "0.16"
+webpki = { package = "rustls-webpki", version = "0.102" }
+sha2 = "0.10"
 
 # WebSocket support
 tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
