--- a/src/crates/transport/Cargo.toml
+++ b/src/crates/transport/Cargo.toml
@@ -28,6 +28,11 @@ x509-parser = "0.16"
 webpki = { package = "rustls-webpki", version = "0.102" }
 sha2 = "0.10"
 
+# Certificate revocation checking
+reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
+der-parser = "9.0"
+oid-registry = "0.7"
+
 # WebSocket support
 tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
 tungstenite = "0.24"
