--- a/src/crates/config/Cargo.toml
+++ b/src/crates/config/Cargo.toml
@@ -14,3 +14,6 @@ serde = { version = "1.0", features = ["derive"] }
 toml = "0.8"
 thiserror = "1.0"
 clap = { version = "4.5", features = ["derive"] }
+hex = "0.4"
+base64 = "0.22"
+sha2 = "0.10"
