Add certificate validation tests and utilities
Introduces comprehensive integration tests for certificate validation, including organization ID extraction, fingerprint computation, and certificate pinning. Adds test utilities for generating various types of certificates and certificate chains. Refactors TLS config functions for improved error handling and testability. Updates dependencies to support testing and hex encoding.

--- a/src/crates/transport/Cargo.toml
+++ b/src/crates/transport/Cargo.toml
@@ -51,6 +51,15 @@ anyhow = "1.0"
 # Tracing
 tracing = "0.1"
 
+# Utilities
+hex = "0.4"  # Hex encoding for fingerprints
+
+[dev-dependencies]
+# Testing utilities
+tempfile = "3.12"
+rcgen = "0.13"  # Certificate generation for tests
+time = "0.3"    # Time handling for certificate validity
+
 [features]
 default = ["tls", "websocket"]
 tls = []
