Add revocation tests and test dependencies
Added a comprehensive integration test suite for certificate revocation checking (CRL and OCSP) in `revocation_tests.rs`. Updated Cargo.toml to include `mockito` and `tokio-test` as test dependencies for HTTP mocking and async test utilities.

--- a/src/crates/transport/Cargo.toml
+++ b/src/crates/transport/Cargo.toml
@@ -59,6 +59,8 @@ hex = "0.4"  # Hex encoding for fingerprints
 tempfile = "3.12"
 rcgen = "0.13"  # Certificate generation for tests
 time = "0.3"    # Time handling for certificate validity
+mockito = "1.5" # HTTP server mocking for CRL/OCSP tests
+tokio-test = "0.4"  # Async test utilities
 
 [features]
 default = ["tls", "websocket"]
