Add Prometheus security metrics to transport crate
Introduces a new metrics.rs module providing comprehensive Prometheus metrics for certificate validation, revocation checking, certificate rotation, and TLS handshakes. Updates Cargo.toml to include the prometheus dependency and exposes SecurityMetrics in the crate's public API.

--- a/src/crates/transport/Cargo.toml
+++ b/src/crates/transport/Cargo.toml
@@ -48,6 +48,9 @@ bytes = "1.7"
 thiserror = "1.0"
 anyhow = "1.0"
 
+# Metrics
+prometheus = { version = "0.13", features = ["process"] }
+
 # Tracing
 tracing = "0.1"
 
