Add CI/CD, benchmarks, admin API, and diagnostics
Introduces GitHub Actions workflows for CI, release, and code coverage, as well as Dockerfiles for client and server, docker-compose for local development, and code quality configs (clippy, rustfmt, cargo-deny, codecov). Adds a new benchmark crate with certificate and health benchmarks using criterion. Implements admin API endpoints for certificate management, audit logging, and authentication/authorization. Adds a CLI diagnostic tool with multiple subcommands for certificate and health checks. Updates Cargo.toml for workspace and benchmarking. Includes a comprehensive changelog and various improvements across admin API, CLI, config, persistence, protocol, server-core, and transport crates.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ members = [
     "src/crates/cli",
     "src/crates/config",
     "src/client",
-    "src/server"
+    "src/server",
+    "benches"
 ]
 
 [workspace.package]
@@ -24,4 +25,7 @@ repository = "https://github.com/navatron/norc"
 homepage = "https://navatron.com"
 description = "NavaTron Open Real-time Communication Protocol"
 keywords = ["chat", "protocol", "encryption", "federation"]
+
+[workspace.dependencies]
+criterion = "0.5"
 
